--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "aws-jwt-verify": "^3.2.0",
+    "cookie": "^0.5.0",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
@@ -24,5 +25,8 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
+  },
+  "devDependencies": {
+    "@types/cookie": "^0.5.1"
   }
 }
